feliz aniversário peidinho 14

--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Chapa hoje?</title>
+		<title>Minezin hoje?</title>
+		<link rel="icon" href="icon.png" type="image/png" />
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
 		<div id="container" class="container">
-			<h1>Quer me colocar na chapa? 😈</h1>
+			<h1>
+				Vamo jogar Mine?
+				<img class="icon-mine" src="icon.png" alt="icon"/>
+			</h1>
 			<div class="buttons">
 				<button id="sim">Sim</button>
 				<button id="nao">Não</button>
 			</div>
-			<p id="bobona"></p>
+			<p id="bobao"></p>
 			<p id="mensagem"></p>
 		</div>
 		<script src="script.js"></script>
